# sim-auto-tuner

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
ai/: AI_EXECUTION_CONTRACT.md
ai/tasks/: README.md
ai/tasks/TASK_001_milestone_0_baseline/: checklist.md  task.json
ai/tasks/templates/: checklist.md  progress.ndjson  task.json
app/: CMakeLists.txt  cli_config.cpp  cli_config.h  cli_test.cpp  main.cpp
app/include/app/: cli_config.h
bench/: CMakeLists.txt
docs/: ARCHITECTURE.md  BUILD.md  CLI_REFERENCE.md  CODING_STYLE.md  DEPENDENCIES.md
sim/: CMakeLists.txt
sim/include/sim/: logging.h
sim/src/: logging.cpp
tests/: CMakeLists.txt
